# safefile

./: Cargo.toml
cli/: Cargo.toml
cli/src/: cli.rs  formatting.rs  main.rs
core/: Cargo.toml
core/src/: consts.rs  container.rs  crypto.rs  error.rs  format.rs  lib.rs  ops.rs  shamir.rs  stream_aes.rs  utils.rs
gui/: Cargo.toml
gui/src/: decryption_panel.rs  encryption_panel.rs  main.rs
gui/src/components/: file_row.rs  mod.rs  multifile_selector.rs  slider_row.rs  text_row.rs
src/: cli.rs  consts.rs  container.rs  crypto.rs  error.rs  format.rs  main.rs  ops.rs  shamir.rs  stream_aes.rs  utils.rs
