[package]
name = "safefile"
version = "0.1.0"
edition = "2024"

[lib]
name = "safefile"
path = "src/lib.rs"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sss-rs = "0.13.0"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4.42"
aes-gcm-stream = "0.2.4"
aes-gcm = "0.10.3"
zeroize = "1"