[package]
name = "safefile-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "safefile-gui"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "sipper", "tokio"] }
iced_dialog = "0.14.0"
rfd = "0.17.1"
safefile = { path = "../core" }
tokio = { version = "1.49.0", features = ["sync"] }
